--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
         
       - name: Notify on failure
         if: failure()
-        uses: dawidd6/action-send-mail@v2
+        uses: SlothyKoala
         with:
           server_address: https://armandctu.slack.com
           server_port: 587
@@ -37,4 +37,4 @@ jobs:
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: Build or deployment failed
           body: The build or deployment has failed. Please check the logs for details.
-          to: aneethling21@gmail.com  # Email address to receive the notification
+          to: aneethling21@gmail.com
