--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
         
       - name: Notify on failure
         if: failure()
-        uses: rtCamp/action-slack-notify@v2
+        uses: https://github.com/SlothyKoala/PipelineCICD/blob/main/.github/workflows/ci-cd.yml
         with:
           server_address: .github/workflows/ci-cd.yml
           server_port: 587
