--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,36 +5,59 @@ on:
     branches:
       - main
 
+ 
 jobs:
-  build:
+  build-test-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        
+
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
-          
+          node-version: 14
+
       - name: Install dependencies
         run: npm install
-        
-      - name: Build and test
+
+      - name: Build
         run: npm run build
-          
-      - name: Deploy
-        run: ./deploy-script.sh
-        
-      - name: Notify on failure
-        if: failure()
-        uses: https://github.com/SlothyKoala/PipelineCICD/blob/main/.github/workflows/ci-cd.yml
+
+      - name: Test
+        run: npm run test
+
+      - name: Deploy to Staging
+        run: npm run deploy
+
+  notify-failure:
+    needs: build-test-deploy
+    runs-on: ubuntu-latest
+
+ 
+    steps:
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          server_address: .github/workflows/ci-cd.yml
-          server_port: 587
-          username: ${{ secrets.EMAIL_USERNAME }}
-          password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: Build or deployment failed
-          body: The build or deployment has failed. Please check the logs for details.
-          to: aneethling21@gmail.com
+          python-version: 3.x
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install yagmail
+
+      - name: Send email notification on failure
+        run: |
+          import yagmail
+          yag = yagmail.SMTP(
+            user='${{ secrets.EMAIL_USERNAME }}',
+            password='${{ secrets.EMAIL_PASSWORD }}',
+            host='smtp.gmail.com',
+            port=587,
+          )
+
+          subject = "CI/CD Pipeline Failed"
+          contents = "The CI/CD pipeline has failed. Please check the logs for details."
+          yag.send('${{ secrets.EMAIL_USERNAME }}', subject, contents)
+        if: ${{ failure() }}
